src/riot-rs-macros/tests/ui/task/non_async_fn.stderr
error: custom attribute panicked
 --> tests/ui/task/non_async_fn.rs:6:1
  |
6 | #[riot_rs::task]
  | ^^^^^^^^^^^^^^^^
  |
  = help: message: the function must be async
